--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,18 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <strong>Pizzeria DSM</strong>
+    <p>el suenio</p>
+
+    <br>
+    <h3>Numero de pedidos: {{totalPedidos}}</h3>
+    <br>
+
+    <ion-button routerLink="/mesa-1">Mesa 1</ion-button>
+    <ion-button routerLink="/mesa-2">Mesa 2</ion-button>
+    <ion-button routerLink="/mesa-3">Mesa 3</ion-button>
+    <ion-button routerLink="/mesa-4">Mesa 4</ion-button>
+
+    <ion-button routerLink="/mesas" expand="full">todos los pedidos</ion-button>
   </div>
 </ion-content>
